<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="12dp"
    android:background="@drawable/bg_card_2"
    android:layout_marginVertical="6dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginBottom="12dp">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_building"
            android:layout_marginEnd="8dp"/>

        <TextView
            style="@style/DescriptionBoldTextStyle"
            android:id="@+id/txtScheduleRoom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/room_code_value"
            android:textColor="@color/black"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginBottom="12dp">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_course_category"
            android:layout_marginEnd="8dp"/>

        <TextView
            style="@style/DescriptionRegularTextStyle"
            android:id="@+id/txtCourseCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/course_category_value"
            android:textColor="@color/black"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginBottom="12dp">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_book"
            android:layout_marginEnd="8dp"/>

        <TextView
            style="@style/DescriptionRegularTextStyle"
            android:id="@+id/txtScheduleCourse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/course_name_value"
            android:textColor="@color/black"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginBottom="12dp">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_teacher"
            android:layout_marginEnd="8dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/DescriptionRegularTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/session"
                android:textColor="@color/black"
                android:layout_marginEnd="5dp"/>

            <TextView
                style="@style/DescriptionRegularTextStyle"
                android:id="@+id/txtSession"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/session_number"
                android:textColor="@color/black"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginBottom="12dp">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_time"
            android:layout_marginEnd="8dp"/>

        <TextView
            style="@style/DescriptionRegularTextStyle"
            android:id="@+id/txtScheduleDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textColor="@color/black"/>
    </LinearLayout>

    <TextView
        style="@style/DescriptionRegularTextStyle"
        android:id="@+id/txtScheduleTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:textColor="@color/black"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="12dp"/>


    <!-- More Detail Button -->
    <Button
        android:id="@+id/btnMoreDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/more_detail"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:backgroundTint="@color/yellow_orange"
        android:layout_marginTop="12dp"
        android:padding="12dp"
        android:background="@drawable/rounded_button"/>
</LinearLayout>
