<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/rich_electric_blue">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/logo_herenow" />


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="50dp"
        app:cardElevation="8dp"
        android:background="@drawable/top_rounded_corners">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="25dp">

            <TextView
                style="@style/HeaderTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hello"
                android:textColor="@color/rich_electric_blue"/>

            <TextView
                style="@style/HeaderItalicTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tanda_seru"
                android:textColor="@color/rich_electric_blue"/>

        </LinearLayout>


        <!-- Input Email -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            app:startIconDrawable="@drawable/ic_email"
            app:startIconCheckable="false">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/DescriptionRegularTextStyle"
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingStart="40dp"
                android:paddingBottom="10dp"/>
        </com.google.android.material.textfield.TextInputLayout>


        <!-- Input Password -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:startIconDrawable="@drawable/ic_lock"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/DescriptionRegularTextStyle"
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingStart="40dp"
                android:paddingBottom="10dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Tombol Login -->
        <Button
            style="@style/TitleTextStyle"
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textAllCaps="false"
            android:layout_marginTop="100dp"
            android:backgroundTint="@color/rich_electric_blue"
            android:textColor="@color/white"
            android:padding="12dp"
            android:background="@drawable/rounded_button"/>
    </LinearLayout>

    </FrameLayout>
</LinearLayout>
